fix: fix gap property for CommonContent to the right one

--- a/src/components/CommonContent/CommonContent.module.css
+++ b/src/components/CommonContent/CommonContent.module.css
@@ -1,7 +1,7 @@
 .content {
 	display: flex;
 	flex-direction: column;
-	gap: 0.875rem;
+	gap: 5rem;
 }
 
 .icon {
